services/aredn-dmrhub/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: aredn-dmrhub
  namespace: aredn-dmrhub
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-dmrhub
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: aredn-dmrhub
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dmrhub
            app.kubernetes.io/instance: dmrhub
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    - toCIDR:
        - 107.221.156.131/32
      toPorts:
        - ports:
            - port: "5581"
              protocol: UDP
